# aip-engine

./: LICENSE  README.md  pyproject.toml  run_phpe5_server.py
examples/: run_phpe5_colgen.py
src/aip/: __init__.py  colgen_pricing.py  colgen_solver.py  detector.py  solver.py
src/aip/accordion/: __init__.py  builder.py  fast.py  indexing.py  solver.py
tests/: test_aip.py  test_colgen.py
